# LearningDirectX12

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DownloadAssets.bat  GenerateProjectFiles.bat  LICENSE  README.md  va_snippets.txt  vcpkg.json
DX12Lib/: CMakeLists.txt  DX12Lib.rc  resource.h
DX12Lib/Resources/Shaders/: GenerateMips_CS.hlsl  ImGUI_PS.hlsl  ImGUI_VS.hlsl  PanoToCubemap_CS.hlsl
DX12Lib/inc/: Adapter.h  Application.h  Buffer.h  ByteAddressBuffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  DX12LibPCH.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  DynamicDescriptorHeap.h  Events.h  GUI.h  Game.h  GenerateMipsPSO.h  GenerateMips_CS.inc  Helpers.h  HighResolutionClock.h  ImGUI_PS.inc  ImGUI_VS.inc  IndexBuffer.h  KeyCodes.h  Mesh.h  PanoToCubemapPSO.h  RenderTarget.h  Resource.h  ResourceStateTracker.h  RootSignature.h  Scene.h  SceneNode.h  StructuredBuffer.h  Texture.h  TextureUsage.h  ThreadSafeQueue.h  UploadBuffer.h  VertexBuffer.h  Window.h
DX12Lib/inc/dx12lib/: Adapter.h  Application.h  Buffer.h  ByteAddressBuffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  ConstantBufferView.h  Defines.h  DepthStencilView.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  Device.h  DynamicDescriptorHeap.h  Events.h  GUI.h  Game.h  GenerateMipsPSO.h  Helpers.h  HighResolutionClock.h  IndexBuffer.h  IndexBufferView.h  Material.h  Mesh.h  PanoToCubemapPSO.h  PipelineStateObject.h  RenderTarget.h  RenderTargetView.h  Resource.h  ResourceStateTracker.h  RootSignature.h  Scene.h  SceneNode.h  ShaderResourceView.h  StructuredBuffer.h  SwapChain.h  Texture.h  TextureUsage.h  UnorderedAccessView.h  (+6 more)
DX12Lib/src/: Adapter.cpp  Application.cpp  Buffer.cpp  ByteAddressBuffer.cpp  CommandList.cpp  CommandQueue.cpp  ConstantBuffer.cpp  ConstantBufferView.cpp  DX12LibPCH.cpp  DX12LibPCH.h  DepthStencilView.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  Device.cpp  DynamicDescriptorHeap.cpp  GUI.cpp  Game.cpp  GenerateMipsPSO.cpp  HighResolutionClock.cpp  IndexBuffer.cpp  IndexBufferView.cpp  Material.cpp  Mesh.cpp  PanoToCubemapPSO.cpp  PipelineStateObject.cpp  RenderTarget.cpp  RenderTargetView.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  Scene.cpp  SceneNode.cpp  ShaderResourceView.cpp  StructuredBuffer.cpp  SwapChain.cpp  Texture.cpp  UnorderedAccessView.cpp  UploadBuffer.cpp  VertexBuffer.cpp  (+3 more)
DX12Lib/src/DirectXTex/: DDSTextureLoader12.cpp  WICTextureLoader12.cpp
DirectX12Template/: CMakeLists.txt
DirectX12Template/inc/: Application.h  DX12FrameworkView.h  DX12FrameworkViewSource.h  DX12Game.h  DirectX12Template.h  DirectX12TemplateDefines.h  DirectX12TemplatePCH.h  Events.h  Game.h  Helpers.h  HighResolutionTimer.h  Object.h  Window.h
DirectX12Template/src/: Application.cpp  DX12FrameworkView.cpp  DX12FrameworkViewSource.cpp  DX12Game.cpp  Game.cpp  HighResolutionTimer.cpp  Window.cpp
DirectX12TutorialLib/: CMakeLists.txt
DirectX12TutorialLib/inc/: Application.h  DirectX12Tutorial.h  DirectX12TutorialDefines.h  DirectX12TutorialPCH.h  Events.h  Game.h  HighResolutionTimer.h  KeyCodes.h  Object.h  Window.h
DirectX12TutorialLib/src/: Application.cpp  DirectX12TutorialPCH.cpp  Game.cpp  HighResolutionTimer.cpp  Object.cpp  Window.cpp
DirectXTex/: CMakeLists.txt
GameFramework/: CMakeLists.txt  GameFramework.rc  resource.h
GameFramework/inc/: Application.h  CThreadSafeQueue.h  Events.h  GameFramework.h  GameFrameworkPCH.h  LogManager.h  LogStream.h  Window.h  signals.hpp
GameFramework/inc/GameFramework/: Events.h  GameFramework.h  HighResolutionTimer.h  KeyCodes.h  ReadDirectoryChanges.h  Window.h  bitmask_operators.hpp
GameFramework/inc/signals/: optional.hpp  signals.hpp
GameFramework/inc/spdlog/: tweakme.h
GameFramework/src/: Application.cpp  GameFramework.cpp  GameFrameworkPCH.cpp  GameFrameworkPCH.h  HighResolutionTimer.cpp  LogManager.cpp  LogStream.cpp  ReadDirectoryChanges.cpp  ReadDirectoryChangesPrivate.cpp  ReadDirectoryChangesPrivate.h  Window.cpp
Tutorial1/: CMakeLists.txt  Tutorial1.rc  resource.h
Tutorial1/inc/: Helpers.h  Tutorial1.h  Tutorial1PCH.h
Tutorial1/src/: Tutorial1.cpp  Tutorial1PCH.cpp  main.cpp
Tutorial2/: CMakeLists.txt
Tutorial2/inc/: Application.h  CommandQueue.h  Game.h  KeyCodes.h  Tutorial2.h  Window.h
Tutorial2/shaders/: PixelShader.hlsl  VertexShader.hlsl
Tutorial2/src/: CommandQueue.cpp  Game.cpp  Tutorial1.cpp  Tutorial2.cpp  Window.cpp  main.cpp
Tutorial3/: CMakeLists.txt  packages.config
Tutorial3/inc/: Camera.h  Light.h  Material.h  Tutorial3.h
Tutorial3/shaders/: VertexShader.hlsl
Tutorial3/src/: Material.cpp  Tutorial3.cpp  main.cpp
Tutorial4/: CMakeLists.txt
Tutorial4/inc/: Light.h  Material.h  Tutorial4.h
Tutorial4/shaders/: HDRtoSDR_PS.hlsl  HDRtoSDR_VS.hlsl  Skybox_PS.hlsl  Skybox_VS.hlsl
Tutorial4/src/: Material.cpp  Tutorial4.cpp  main.cpp
samples/01-ClearScreen/: CMakeLists.txt
samples/01-ClearScreen/src/: main.cpp
samples/02-Cube/: CMakeLists.txt
samples/02-Cube/shaders/: PixelShader.hlsl
samples/02-Cube/src/: Application.cpp  HighResolutionClock.cpp  Tutorial2.cpp  Window.cpp  main.cpp
samples/03-Textures/: CMakeLists.txt
samples/03-Textures/inc/: SceneVisitor.h  Tutorial3.h
samples/03-Textures/shaders/: PixelShader.hlsl  UnlitPixelShader.hlsl  VertexShader.hlsl
samples/03-Textures/src/: SceneVisitor.cpp  Tutorial3.cpp  main.cpp
samples/04-HDR/: 04-HDR.vcxproj.user.in  CMakeLists.txt
samples/04-HDR/inc/: Tutorial4.h
samples/04-HDR/shaders/: HDR_PS.hlsl  HDRtoSDR_VS.hlsl  Unlit_PS.hlsl
samples/04-HDR/src/: Camera.cpp  SceneVisitor.cpp  Tutorial4.cpp  main.cpp
samples/05-Models/: CMakeLists.txt
samples/05-Models/inc/: BasicLightingPSO.h  Camera.h  CameraController.h  EffectPSO.h  Light.h  Material.h  SceneVisitor.h  Tutorial5.h
samples/05-Models/shaders/: Base_PS.hlsli  Decal_PS.hlsl  Lighting_PS.hlsl  PixelShader.hlsl  VertexShader.hlsl
samples/06-DXR/: CMakeLists.txt
(+2588 files in other folders)
